# novella_square

./: .gitignore  README.md  capture.py  config.ini  install.ps1  main.py  pyproject.toml  uninstall.ps1
sources/: capture.py  capture_button.py  settings.py  settings_dialog.py
