[project]
name = "subtitles"
version = "0.1.0"
description = "Add your description here"
requires-python = "==3.11.*"
dependencies = [
    "ffmpeg-python",
    "pyqt6>=6.11.0",
    "pytest",
    "paddlepaddle==3.2.0",
    "paddleocr==3.2.0",
    "paddlex==3.2.0",
    "torchvision",
    "keyboard",
    "pyperclip"
]

[tool.uv.extra-build-dependencies]
pandas = ["pkg_resources"]
