[project]
name = "subtitles"
version = "0.1.0"
description = "just "
requires-python = "==3.11.*"
dependencies = [
    "ffmpeg-python",
    "pyqt6>=6.11.0",
    "pytest",
    "paddlepaddle==3.0.0",
    "paddleocr==3.0.0",
    "paddlex==3.0.0",
    "torchvision",
    "keyboard",
    "pyperclip"
]

[tool.uv.extra-build-dependencies]
pandas = ["pkg_resources"]
